tests/ui/lub-glb/old-lub-glb-object.stderr
error: higher-ranked subtype error
  --> $DIR/old-lub-glb-object.rs:9:14
   |
LL |         _ => y,
   |              ^

error: higher-ranked subtype error
  --> $DIR/old-lub-glb-object.rs:9:14
   |
LL |         _ => y,
   |              ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

